# gazebo_ros_ws

./: README.md  frames.gv  setup_gazebo.sh
blender_models/: hallway.blend  hallway.blend1
devel/: .catkin  .rosinstall  setup.sh
devel/include/gazebo_msgs/: ApplyBodyWrenchRequest.h  ApplyBodyWrenchResponse.h  ApplyJointEffortRequest.h  ApplyJointEffortResponse.h  BodyRequestRequest.h  BodyRequestResponse.h  ContactState.h  ContactsState.h  DeleteModelRequest.h  DeleteModelResponse.h  GetJointPropertiesRequest.h  GetJointPropertiesResponse.h  GetLinkPropertiesRequest.h  GetLinkPropertiesResponse.h  GetLinkStateRequest.h  GetLinkStateResponse.h  GetModelPropertiesRequest.h  GetModelPropertiesResponse.h  GetModelStateRequest.h  GetModelStateResponse.h  GetPhysicsPropertiesRequest.h  GetPhysicsPropertiesResponse.h  GetWorldPropertiesRequest.h  GetWorldPropertiesResponse.h  JointRequestRequest.h  JointRequestResponse.h  LinkState.h  LinkStates.h  ModelState.h  ModelStates.h  ODEJointProperties.h  ODEPhysics.h  (+17 more)
models/car_low_poly/: car_low_poly.dae  model.config  model.sdf
models/hallway/: hallway.dae  model.config  model.sdf
src/robots/rc_car/rc_car_gazebo/: CMakeLists.txt  CMakeLists.txt~  package.xml~
src/robots/rc_car/rc_car_gazebo/config/chassis/: ackermann_ctrl_params_stiff_shocks.yaml  ackermann_joint_ctrl_params_stiff_shocks.yaml
src/robots/rc_car/rc_car_gazebo/launch/: rc.launch
src/robots/rc_car/rc_car_gazebo/scripts/: rc_car_controller.py
src/robots/rc_car/rc_car_gazebo/src/: joint_controller.cpp  odom_node.cpp
worlds/: custom.world
(+149 files in other folders)
